<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">clinipet my part final</string>
    <string name="txt">Meow Mix</string>
    <string name="txtt">JAKE\'S</string>
    <string name="heart">" Hearts and Poultry Dog Wet Food "</string>
    <string name="fd_oder">Pet Meals Shops.</string>
    <string name="odr_food_critty">Pets Food Critterly</string>
    <string name="food_JAKE">JAKE\'S</string>
    <string name="food_ThePetShack">The Pet Shack</string>
    <string name="food_Sandy">Sandy\'s</string>
    <string name="pro_Echanneling">"Echanneling  "</string>
    <string name="pro_OrderMedicine">"Order Medicine "</string>
    <string name="pro_OderFood">"Oder Food "</string>
    <string name="pro_AddSymptoms">Add Symptoms</string>
    <string name="pro_FindPartner">Find Partner</string>
    <string name="food_selective">Selective Mature</string>
    <string name="food" tools:ignore="DuplicateDefinition">Selective Mature</string>
    <string name="parrot">ZuPreem Natural</string>
    <string name="ppp">ZuPreem Natural</string>
    <string name="part">ZuPreem Natural</string>
    <string name="descrimeow">"Meow Mix "</string>
    <string name="m1">TODO</string>
    <string name="meow_mix">Meow Mix</string>
    <string name="price">"Price "</string>
    <string name="ground_yellow_corn_soybean_meal_chicken_by_product_meal_corn_gluten_meal_beef_tallow_preserved_with_mixed_tocopherols_animal_digest_calcium_carbonate_turkey_by_product_meal_salmon_meal_ocean_fish_meal_phosphoric_acid_salt_dicalcium_phosphate_choline_chloride_vitamins_vitamin_e_supplement_niacin_supplement_vitamin_a_supplement_d_calcium_pantothenate_thiamine_mononitrate_source_of_vitamin_b1_riboflavin_supplement_source_of_vitamin_b2_pyridoxine_hydrochloride_source_of_vitamin_b6">Ground Yellow Corn,Soybean Meal,Chicken By-Product Meal,Corn Gluten Meal,Beef Tallow (Preserved with Mixed Tocopherols),Animal Digest,Calcium Carbonate,Turkey By-Product Meal,Salmon Meal,Ocean Fish Meal,Phosphoric Acid,Salt,Dicalcium Phosphate,Choline Chloride,Vitamins (Vitamin E Supplement, Niacin Supplement, Vitamin A Supplement, D-Calcium Pantothenate, Thiamine Mononitrate (Source of vitamin B1), Riboflavin Supplement (Source of vitamin B2), Pyridoxine Hydrochloride (Source of vitamin B6),</string>
    <string name="amount">500</string>
    <string name="textview">TextView</string>
    <string name="amountt">1000</string>
    <string name="qnty">Quantity</string>
    <string name="oder">Comfirm</string>
    <string name="oderUpDlt">Quantity</string>
    <string name="oderbtn">Order</string>
    <string name="m2" tools:ignore="DuplicateDefinition">m1</string>
    <string name="m3">m3</string>
    <string name="tex1">UPDATE ORDER</string>
    <string name="bttn1">DELETE</string>
    <string name="pymnt">Owner\'s Name</string>
    <string name="petpymnt">Pet Name</string>
    <string name="pymtAddress">Address</string>
    <string name="tex11">Phone Number</string>
    <string name="pymntAmount">Total Bill</string>
    <string name="pymntbtton">Cash on Delivery</string>
    <string name="pymcnclbttn">Cancel</string>
    <string name="tex12">"Unit Price "</string>
    <string name="unit_price">Unit Price</string>
    <string name="amnt12">Total Amount</string>
    <string name="tmnt">Total Amount</string>
    <string name="qntypls">+</string>
    <string name="txt520">0</string>
    <string name="qntybtn">-</string>
</resources>